# factor_lab

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_pollard_rho.py
factorlab/: cli.py  factor.py  pollard_rho.py  primality.py  primes.py  trial_division.py  utils.py
tests/: test_cli.py  test_factor.py  test_pollard_rho.py  test_property.py
